--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ tqdm==4.66.0
 openai==0.27.8
 beautifulsoup4==4.11.1
 chromadb==0.3.29
-Pillow==10.0.0
+Pillow==9.0.0
 wikipedia==1.4.0
 pandas==1.5.0
+streamlit==1.26.0
